Criação de duas novas divs

--- a/index.html
+++ b/index.html
@@ -122,10 +122,17 @@
                 <h3>
                     A informação nunca foi tão importante. Esteja sempre um passo à frente com nosso aplicativo de notícias.
                 </h3>
-                <div class="carousel-container">
-                    <iframe src="carousel.html"></iframe>
-                </div>
             </section>
+        </div>
+        <div class="carrossel-separado">
+            <div class="carousel-container">
+                <iframe src="carousel.html"></iframe>
+            </div>
+        </div>
+        <div class="carrossel-frase">
+            <h2>
+                Você vai querer ficar de fora?
+            </h2>
         </div>
     </main>
     <footer>
