Ajustes de forms

--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
                     <p class="frase2">Fale com o time comercial</p>
                 </fieldset>
                 <fieldset>
-                    <input type="text" id="nome" class="textfield" name="nome" aria-label="nome" placeholder="Nome*" tabindex="1" required>                    
-                    <input type="text" id="empresa" class="textfield" name="empresa"aria-label="empresa" placeholder="Empresa*" tabindex="2" required>                    
-                    <input type="text" id="setor" class="textfield" name="setor" aria-label="setor" placeholder="Setor" tabindex="3">                    
-                    <input type="email" id="email" class="textfield" name="email" aria-label="email" placeholder="E-mail*" tabindex="4" required>                    
-                    <input type="number" id="campoNumero" class="textfield" name="whatsapp" aria-label="whatsapp" placeholder="WhatsApp*" tabindex="5" required>                    
-                    <textarea name="mensagem" id="mensagem" style="resize: none" class="textfield" cols="20" rows="10" placeholder="Digite sua mensagem aqui" tabindex="6"></textarea>
+                    <input type="text" id="nome" class="textfield" name="nome" aria-label="nome" placeholder="Nome*" required>                    
+                    <input type="text" id="empresa" class="textfield" name="empresa"aria-label="empresa" placeholder="Empresa*" required>                    
+                    <input type="text" id="setor" class="textfield" name="setor" aria-label="setor" placeholder="Setor">                    
+                    <input type="email" id="email" class="textfield" name="email" aria-label="email" placeholder="E-mail*" required>                    
+                    <input type="number" id="campoNumero" class="textfield" name="whatsapp" aria-label="whatsapp" placeholder="WhatsApp*" required>                    
+                    <textarea name="mensagem" id="mensagem" style="resize: none" class="textfield" cols="20" rows="10" placeholder="Digite sua mensagem aqui"></textarea>
                 </fieldset>
                 <fieldset class="caixaemail">  
                     <a href="mailto:contato@businessnews.com.br" class="mailto">contato@businessapp.com.br</a>
@@ -101,13 +101,13 @@
         <div id="conheca-app" class="frase4">
             <h2>Após responder o formulário baixe o APP e aproveite seus 7 dias de teste!</h2>
         </div>
-        <figure class="container-celular">
+        <div class="container-celular">
             <img src="./assets/Frame.png" alt="celular branco com a imagem do aplicatico do business news" class="celular">
             <div class="lojasapp">
                 <a href="https://play.google.com/store/apps/details?id=br.com.businessapp&hl=pt&gl=US"><img src="./assets/googleplay.png" class="googleplay" alt="logotipo com os dizeres 'disponível no google play' "></a>
                 <a href="https://apps.apple.com/br/app/business-news/id1546248277"><img src="./assets/appstore.png" class="applestore" alt="logotipo play store"></a>
             </div>
-        </figure>
+        </div>
 
         <div class="video">
             <video width="620" height="420" muted="true" loop="true" controls="controls" autoplay="autoplay">
